Clean travis config for testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,12 @@
 language: node_js
-node_js: "10"
-cache: npm
-
-branches:
-  only:
-    - develop
-    - master
-    - /^[0-9]{4}-[0-9]{2}-[0-9]{2}-[0-9]+$/
-
-env:
-  global:
-    - PATH=$HOME/.local/bin:$PATH # for `aws`
-
-install:
-  - npm ci
-  - pip install --user awscli
-
-script:
-  - npm run build
-  - zip -r build-$TRAVIS_TAG.zip build
-  - echo "Bundle SHA-256 checksum $(sha256sum build-$TRAVIS_TAG.zip)"
+node_js: 10
+dist: bionic
 
 deploy:
-  - provider: s3
-    access_key_id: $AWS_ACCESS_KEY_ID
-    secret_access_key: $AWS_SECRET_ACCESS_KEY
-    bucket: $S3_BUCKET
-    skip_cleanup: true
-    region: us-east-2
-    local_dir: build
-    on:
-      branch: develop
-    cache_control: "max-age=$CACHE_MAX_AGE"
-
-  - provider: s3
-    access_key_id: $AWS_ACCESS_KEY_ID
-    secret_access_key: $AWS_SECRET_ACCESS_KEY
-    bucket: $S3_BUCKET
-    skip_cleanup: true
-    region: us-east-2
-    local_dir: build
-    on:
-      branch: master
-    cache_control: "max-age=$CACHE_MAX_AGE"
-
-  - provider: releases
-    api_key: $GH_TOKEN
-    file: build-$TRAVIS_TAG.zip
-    skip_cleanup: true
-    draft: true
-    name: $TRAVIS_TAG
-    on:
-      condition: $TRAVIS_TAG =~ ^[0-9]{4}-[0-9]{2}-[0-9]{2}-[0-9]+$
-
-after_deploy:
-  - aws configure set preview.cloudfront true
-  # - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
+  bucket: "metronometoken.com"
+  skip_cleanup: true
+  region: us-east-2
+  local_dir: build
