Added the "npm run build" to script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,16 @@ language: node_js
 node_js: 10
 dist: bionic
 
+script: 
+  - npm run build
+  - echo "Would you like to play a game?"
+
 deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
   bucket: "metronometoken.com"
+  acl: public_read
   skip_cleanup: true
   region: us-east-2
   local_dir: build
